--- a/index - ar.html
+++ b/index - ar.html
@@ -266,7 +266,6 @@
               <h1 class="banner__title">
                 <span class="d-lg-block">
 تيبرا هي العمود الفقري الذي تفتقر اليه عيادتك وعلاماك التجارية
-
               </h1>
               <p class="banner__text">
                 الفجوة بين الرعاية الصحية والتسويق بلاصالة مع الخبرة والابتكار
@@ -2826,254 +2825,80 @@ TEBRAE
       </div>
     </section>
 
-    <!-- Testimonial Section -->
-    <section class="testimonial">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="testimonial__slider position-relative">
-              <div class="testimonial__slide">
-                <div class="testimonial__card">
-                  <div class="row">
-                    <div class="col-lg-5">
-                      <div
-                        class="testimonial__card__head d-flex align-items-center position-relative"
-                      >
-                        <img
-                          src="./assets/images/reviews/testimonial-1.png"
-                          alt="testimonial image"
-                          class="testimonial__card__head__image img-fluid"
-                        />
-                        <a
-                          href="https://vimeo.com/839629912?share=copy"
-                          data-autoplay="true"
-                          data-vbtype="video"
-                          data-gall="testimonialGallery"
-                          class="testimonial__card__play-btn venobox rounded-circle position-absolute"
-                        >
-                          <img
-                            src="./assets/images/reviews/play-icon.png"
-                            alt="play icon"
-                            class="testimonial__card__play-btn__image w-100"
-                          />
-                        </a>
-                      </div>
-                    </div>
-                    <div class="col-lg-7 d-flex align-items-center">
-                      <div class="testimonial__card__body">
-                        <p class="testimonial__card__text">
-                       كان حلمي العمل مع فريق مثالي في تيبرا ،اجرائيا لديهم كل شيء موصول بالعلم ،تمكننا من اطلاق موعد عملائي قبل الموعد المحدد تقييم مراجعات الموقع  ونتائج حركة المرور
-                        </p>
-                        <h4 class="testimonial__card__user">
-                        استشاري جراحة القلب والصدر والأوعية الدموية
-                        </h4>
-                          <div class="banner__review-wrapper">
-                <ul class="banner__review__list nav">
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
+     <!-- Testimonial Section -->
+   <section class="testimonial">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="testimonial__slider position-relative">
+						<div class="testimonial__slide">
+							<div class="testimonial__card">
+								<div class="row">
+									<div class="col-lg-5">
+										<div class="testimonial__card__head d-flex align-items-center position-relative">
+											<img src="./assets/images/reviews/testimonial-1.png" alt="testimonial image" class="testimonial__card__head__image img-fluid">
+											<a href="https://vimeo.com/839629912?share=copy" data-autoplay="true" data-vbtype="video" data-gall="testimonialGallery" class="testimonial__card__play-btn venobox rounded-circle position-absolute">
+												<img src="./assets/images/reviews/play-icon.png" alt="play icon" class="testimonial__card__play-btn__image w-100">
+											</a>
+										</div>
+									</div>
+									<div class="col-lg-7 d-flex align-items-center">
+										<div class="testimonial__card__body">
+											<p class="testimonial__card__text">  كان حلمي العمل مع فريق مثالي في تيبرا ،اجرائيا لديهم كل شيء موصول بالعلم ،تمكننا من اطلاق موعد عملائي قبل الموعد المحدد تقييم مراجعات الموقع  ونتائج حركة المرور
 
-                  </li>
-                </ul>
-                          </div>
-                        <!-- <a
-                          href="#!"
-                          class="testimonial__card__user-logo d-inline-block"
-                        >
+</p>
+											<h4 class="testimonial__card__user"> استشاري جراحة القلب والصدر والأوعية الدموية</h4>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="testimonial__slide">
+							<div class="testimonial__card">
+								<div class="row">
+									<div class="col-lg-5">
+										<div class="testimonial__card__head d-flex align-items-center position-relative">
+											<img src="./assets/images/reviews/testimonial-2.png" alt="testimonial image" class="testimonial__card__head__image img-fluid">
+											<a href="https://vimeo.com/839631833?share=copy" data-autoplay="true" data-vbtype="video" data-gall="testimonialGallery" class="testimonial__card__play-btn venobox rounded-circle position-absolute">
+												<img src="./assets/images/reviews/play-icon.png" alt="play icon" class="testimonial__card__play-btn__image w-100">
+											</a>
+										</div>
+									</div>
+									<div class="col-lg-7 d-flex align-items-center">
+										<div class="testimonial__card__body">
+											<p class="testimonial__card__text">
+               أظهر فريق تیبرا  احترافا كبيرا ، كما  اثبت بشكل مذهل قدرته على التكييف مع إحتياجات العملاء بلإضافةالى السرعة والمرونة</p>
+											<h4 class="testimonial__card__user">مالك عيادة أڤو</h4>
 
-                          <img
-                            src="./assets/images/reviews/webflow.svg"
-                            alt="company logo"
-                            class="testimonial__card__user-logo__image w-100"
-                          /> -->
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="testimonial__slide">
+							<div class="testimonial__card">
+								<div class="row">
+									<div class="col-lg-5">
+										<div class="testimonial__card__head d-flex align-items-center position-relative">
+											<img src="./assets/images/reviews/testimonial-4.png" alt="testimonial image" class="testimonial__card__head__image img-fluid">
 
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="testimonial__slide">
-                <div class="testimonial__card">
-                  <div class="row">
-                    <div class="col-lg-5">
-                      <div
-                        class="testimonial__card__head d-flex align-items-center position-relative"
-                      >
-                        <img
-                          src="./assets/images/reviews/testimonial-2.png"
-                          alt="testimonial image"
-                          class="testimonial__card__head__image img-fluid"
-                        />
-                        <a
-                          href="https://vimeo.com/839631833?share=copy"
-                          data-autoplay="true"
-                          data-vbtype="video"
-                          data-gall="testimonialGallery"
-                          class="testimonial__card__play-btn venobox rounded-circle position-absolute"
-                        >
-                          <img
-                            src="./assets/images/reviews/play-icon.png"
-                            alt="play icon"
-                            class="testimonial__card__play-btn__image w-100"
-                          />
-                        </a>
-                      </div>
-                    </div>
-                    <div class="col-lg-7 d-flex align-items-center">
-                      <div class="testimonial__card__body">
-                        <p class="testimonial__card__text">
-               أظهر فريق تیبرا  احترافا كبيرا ، كما  اثبت بشكل مذهل قدرته على التكييف مع إحتياجات العملاء بلإضافةالى السرعة والمرونة
-
-                        </p>
-                        <h4 class="testimonial__card__user">
-                        مالك عيادة أڤو
-                        </h4>
-                         <div class="banner__review-wrapper">
-                <ul class="banner__review__list nav">
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                                     </li>
-                </ul>
-                        <a
-                          href="#!"
-                          class="testimonial__card__user-logo d-inline-block"
-                        >
-                          <!-- <img
-                            src="./assets/images/reviews/stxnext.svg"
-                            alt="company logo"
-                            class="testimonial__card__user-logo__image w-100"
-                          /> -->
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- <div class="testimonial__slide">
-                <div class="testimonial__card">
-                  <div class="row">
-                    <div class="col-lg-5">
-                      <div
-                        class="testimonial__card__head d-flex align-items-center position-relative"
-                      >
-                        <img
-                          src="./assets/images/reviews/testimonial-3.png"
-                          alt="testimonial image"
-                          class="testimonial__card__head__image img-fluid"
-                        />
-                        <a
-                          href="https://www.youtube.com/watch?v=4HjirZuTD3A"
-                          data-autoplay="true"
-                          data-vbtype="video"
-                          data-gall="testimonialGallery"
-                          class="testimonial__card__play-btn venobox rounded-circle position-absolute"
-                        >
-                          <img
-                            src="./assets/images/icons/play.svg"
-                            alt="play icon"
-                            class="testimonial__card__play-btn__image w-100"
-                          />
-                        </a>
-                      </div>
-                    </div>
-                    <div class="col-lg-7 d-flex align-items-center">
-                      <div class="testimonial__card__body">
-                        <p class="testimonial__card__text">
-                          After using many different methods to create and
-                          manage Scrum frameworks, I finally found the most
-                          flexible and powerful platform: ClickUp.
-                        </p>
-                        <h4 class="testimonial__card__user">
-                          Gabriel Hoffman, Solutions Engineer, Zen Pilot
-                        </h4>
-                        <a
-                          href="#!"
-                          class="testimonial__card__user-logo d-inline-block"
-                        >
-                          <img
-                            src="./assets/images/reviews/zenpilot.png"
-                            alt="company logo"
-                            class="testimonial__card__user-logo__image w-100"
-                          />
-                        </a>
-                      </div>
-                    </div>
-                  </div> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
+										</div>
+									</div>
+									<div class="col-lg-7 d-flex align-items-center">
+										<div class="testimonial__card__body">
+											<p class="testimonial__card__text"> ساعدتنا الإستراتيجيات والرؤى المصممة خصيصًا لشركة Tebrae في توسيع نطاق وصولنا ،
+                          التواصل مع جمهورنا بشكل أكثر فاعلية وتعزيز سمعة علامتنا التجارية</p>
+                          <h4 class="testimonial__card__user">مدينة السليمانية الطبية</h4>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
     <!-- Features (pink) Section -->
     <section class="features features--purple">
       <div class="features__container mx-auto">
