--- a/index - kur.html
+++ b/index - kur.html
@@ -357,16 +357,16 @@
                       class="banner__review__partners__logo w-100"
                     />
                   </a>
-                  <!-- <a
+                  <a
                     href="#!"
                     target="_blank"
                     class="banner__review__partners__link d-inline-block"
-                  > -->
-                    <!-- <img
-                      src="./assets/images/reviews/reviews-3.svg"
+                  >
+                    <img
+                      src="./assets/images/reviews/review3.png"
                       alt="partners-logo"
                       class="banner__review__partners__logo w-100"
-                    /> -->
+                    />
                   </a>
                 </div>
               </div>
@@ -496,6 +496,7 @@
                     <div class="col-xl-7 offset-xl-1 col-lg-6">
                       <div
                         class="features__videos-wrapper features__videos-wrapper--negative-margin"
+                        id="kurdish_wrapper"
                       >
                         <video
                           src="./assets/videos/Trello-Kurdish.mp4"
@@ -513,9 +514,9 @@
                       </div>
                     </div>
                     <div class="col-xl-4 col-lg-6">
-                      <h2 class="features__title">
+                      <h4 class="features__title">
                 بەهێزکردنی دابینکەرانی چاودێری تەندروستی بۆ سەرکەوتن
-                      </h2>
+                      </h4>
                       <p class="features__text">
 ئەرکی ئێمە بەهێزکردنی دابینکارانی چاوەدێری تەندروستییە بۆ گەیشتن بە ئامانجەکانیان لە ڕێگەی ستراتیژییەکانی بە بازاڕکردنی تایبەتمەند، بە داتا سەلمێنەری زیادبوونی ئامادەبوونی ئۆنڵاین، و خزمەتگوزاری ناوازەی کڕیاران.
 
@@ -2820,256 +2821,77 @@ i
     </section>
 
     <!-- Testimonial Section -->
-    <section class="testimonial">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="testimonial__slider position-relative">
-              <div class="testimonial__slide">
-                <div class="testimonial__card">
-                  <div class="row">
-                    <div class="col-lg-5">
-                      <div
-                        class="testimonial__card__head d-flex align-items-center position-relative"
-                      >
-                        <img
-                          src="./assets/images/reviews/testimonial-1.png"
-                          alt="testimonial image"
-                          class="testimonial__card__head__image img-fluid"
-                        />
-                        <a
-                          href="https://vimeo.com/839629912?share=copy"
-                          data-autoplay="true"
-                          data-vbtype="video"
-                          data-gall="testimonialGallery"
-                          class="testimonial__card__play-btn venobox rounded-circle position-absolute"
-                        >
-                          <img
-                            src="./assets/images/reviews/play-icon.png"
-                            alt="play icon"
-                            class="testimonial__card__play-btn__image w-100"
-                          />
-                        </a>
-                      </div>
-                    </div>
-                    <div class="col-lg-7 d-flex align-items-center">
-                      <div class="testimonial__card__body">
-                        <p class="testimonial__card__text">
-                    کارکردن لەگەڵ تیمی پڕۆفیشناڵی تێبرا وەک خەونێک وابوو، هەموو کارەکانیان بە پڕۆسە داتاشیوە وەک زانست، توانیمان وێبسایتی کڕیارەکانمان پێشوەختە تەواو بکەین و ژمارەیەکی زۆر لە هاتووچۆ و چالاکی بەرز لە خۆ ڕابگرێت
+   <section class="testimonial">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="testimonial__slider position-relative">
+						<div class="testimonial__slide">
+							<div class="testimonial__card">
+								<div class="row">
+									<div class="col-lg-5">
+										<div class="testimonial__card__head d-flex align-items-center position-relative">
+											<img src="./assets/images/reviews/testimonial-1.png" alt="testimonial image" class="testimonial__card__head__image img-fluid">
+											<a href="https://vimeo.com/839629912?share=copy" data-autoplay="true" data-vbtype="video" data-gall="testimonialGallery" class="testimonial__card__play-btn venobox rounded-circle position-absolute">
+												<img src="./assets/images/reviews/play-icon.png" alt="play icon" class="testimonial__card__play-btn__image w-100">
+											</a>
+										</div>
+									</div>
+									<div class="col-lg-7 d-flex align-items-center">
+										<div class="testimonial__card__body">
+											<p class="testimonial__card__text">  کارکردن لەگەڵ تیمی پڕۆفیشناڵی تێبرا وەک خەونێک وابوو، هەموو کارەکانیان بە پڕۆسە داتاشیوە وەک زانست، توانیمان وێبسایتی کڕیارەکانمان پێشوەختە تەواو بکەین و ژمارەیەکی زۆر لە هاتووچۆ و چالاکی بەرز لە خۆ ڕابگرێت
+</p>
+											<h4 class="testimonial__card__user">ڕاوێژکاری نەشتەرگەری دڵ و سنگ و خوێنبەرەکان</h4>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="testimonial__slide">
+							<div class="testimonial__card">
+								<div class="row">
+									<div class="col-lg-5">
+										<div class="testimonial__card__head d-flex align-items-center position-relative">
+											<img src="./assets/images/reviews/testimonial-2.png" alt="testimonial image" class="testimonial__card__head__image img-fluid">
+											<a href="https://vimeo.com/839631833?share=copy" data-autoplay="true" data-vbtype="video" data-gall="testimonialGallery" class="testimonial__card__play-btn venobox rounded-circle position-absolute">
+												<img src="./assets/images/reviews/play-icon.png" alt="play icon" class="testimonial__card__play-btn__image w-100">
+											</a>
+										</div>
+									</div>
+									<div class="col-lg-7 d-flex align-items-center">
+										<div class="testimonial__card__body">
+											<p class="testimonial__card__text">  بە نیشاندانی پیشەییبوونی گەورە، تیمی tebrae سەلماندی کە بە شێوەیەکی سەرسوڕهێنەر گونجاون لەگەڵ پێداویستییەکانی کڕیاران، ئەوان جیاوازن لە خێرایی و خۆگونجاندن.</p>
+											<h4 class="testimonial__card__user">خاوەنی کلینیکی ئاڤو</h4>
 
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="testimonial__slide">
+							<div class="testimonial__card">
+								<div class="row">
+									<div class="col-lg-5">
+										<div class="testimonial__card__head d-flex align-items-center position-relative">
+											<img src="./assets/images/reviews/testimonial-4.png" alt="testimonial image" class="testimonial__card__head__image img-fluid">
 
-                        </p>
-                        <h4 class="testimonial__card__user">
-ڕاوێژکاری نەشتەرگەری دڵ و سنگ و خوێنبەرەکان
-                        </h4>
-                          <div class="banner__review-wrapper">
-                <ul class="banner__review__list nav">
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-
-                  </li>
-                </ul>
-                          </div>
-                        <!-- <a
-                          href="#!"
-                          class="testimonial__card__user-logo d-inline-block"
-                        >
-
-                          <img
-                            src="./assets/images/reviews/webflow.svg"
-                            alt="company logo"
-                            class="testimonial__card__user-logo__image w-100"
-                          /> -->
-
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="testimonial__slide">
-                <div class="testimonial__card">
-                  <div class="row">
-                    <div class="col-lg-5">
-                      <div
-                        class="testimonial__card__head d-flex align-items-center position-relative"
-                      >
-                        <img
-                          src="./assets/images/reviews/testimonial-2.png"
-                          alt="testimonial image"
-                          class="testimonial__card__head__image img-fluid"
-                        />
-                        <a
-                          href="https://vimeo.com/839631833?share=copy"
-                          data-autoplay="true"
-                          data-vbtype="video"
-                          data-gall="testimonialGallery"
-                          class="testimonial__card__play-btn venobox rounded-circle position-absolute"
-                        >
-                          <img
-                            src="./assets/images/reviews/play-icon.png"
-                            alt="play icon"
-                            class="testimonial__card__play-btn__image w-100"
-                          />
-                        </a>
-                      </div>
-                    </div>
-                    <div class="col-lg-7 d-flex align-items-center">
-                      <div class="testimonial__card__body">
-                        <p class="testimonial__card__text">
-               بە نیشاندانی پیشەییبوونی گەورە، تیمی tebrae سەلماندی کە بە شێوەیەکی سەرسوڕهێنەر گونجاون لەگەڵ پێداویستییەکانی کڕیاران، ئەوان جیاوازن لە خێرایی و خۆگونجاندن.
-                        </p>
-                        <h4 class="testimonial__card__user">
-
-خاوەنی کلینیکی ئاڤو
-
-                        </h4>
-                         <div class="banner__review-wrapper">
-                <ul class="banner__review__list nav">
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                    <img
-                      src="./assets/images/icons/star.svg"
-                      alt="star"
-                      class="banner__review__list__item__image img-fluid"
-                    />
-                  </li>
-                  <li class="banner__review__list__item nav-item">
-                                     </li>
-                </ul>
-                        <a
-                          href="#!"
-                          class="testimonial__card__user-logo d-inline-block"
-                        >
-                          <!-- <img
-                            src="./assets/images/reviews/stxnext.svg"
-                            alt="company logo"
-                            class="testimonial__card__user-logo__image w-100"
-                          /> -->
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- <div class="testimonial__slide">
-                <div class="testimonial__card">
-                  <div class="row">
-                    <div class="col-lg-5">
-                      <div
-                        class="testimonial__card__head d-flex align-items-center position-relative"
-                      >
-                        <img
-                          src="./assets/images/reviews/testimonial-3.png"
-                          alt="testimonial image"
-                          class="testimonial__card__head__image img-fluid"
-                        />
-                        <a
-                          href="https://www.youtube.com/watch?v=4HjirZuTD3A"
-                          data-autoplay="true"
-                          data-vbtype="video"
-                          data-gall="testimonialGallery"
-                          class="testimonial__card__play-btn venobox rounded-circle position-absolute"
-                        >
-                          <img
-                            src="./assets/images/icons/play.svg"
-                            alt="play icon"
-                            class="testimonial__card__play-btn__image w-100"
-                          />
-                        </a>
-                      </div>
-                    </div>
-                    <div class="col-lg-7 d-flex align-items-center">
-                      <div class="testimonial__card__body">
-                        <p class="testimonial__card__text">
-                          After using many different methods to create and
-                          manage Scrum frameworks, I finally found the most
-                          flexible and powerful platform: ClickUp.
-                        </p>
-                        <h4 class="testimonial__card__user">
-                          Gabriel Hoffman, Solutions Engineer, Zen Pilot
-                        </h4>
-                        <a
-                          href="#!"
-                          class="testimonial__card__user-logo d-inline-block"
-                        >
-                          <img
-                            src="./assets/images/reviews/zenpilot.png"
-                            alt="company logo"
-                            class="testimonial__card__user-logo__image w-100"
-                          />
-                        </a>
-                      </div>
-                    </div>
-                  </div> -->
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
+										</div>
+									</div>
+									<div class="col-lg-7 d-flex align-items-center">
+										<div class="testimonial__card__body">
+											<p class="testimonial__card__text">ستراتیژی و تێڕوانینە تایبەتمەندەکانی تێبرا یارمەتیدەرمان بوون بۆ فراوانکردنی دەستڕاگەیشتنمان،
+                          بە شێوەیەکی کاریگەرتر پەیوەندی لەگەڵ بینەرانمان بکەن، و ناوبانگی براندەکەمان بەرز بکەنەوە.</p>
+                          <h4 class="testimonial__card__user">شاری پزیشکی سلێمانی</h4>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
     <!-- Features (pink) Section -->
     <section class="features features--purple">
       <div class="features__container mx-auto">
@@ -3202,7 +3024,7 @@ i
       </div>
     </section>
 
-<section class="FAQ-SEC">
+<section class="FAQ-SEC" >
 <div class="container-FAQ">
       <h2>پرسیارە باوەکان</h2>
       <div class="accordion">
