--- a/index.html
+++ b/index.html
@@ -205,15 +205,14 @@
 								</div> -->
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)"> About</a>
+                  <a class="nav-link" href="./About/About.html"> About</a>
                 </li>
                   <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)"> Blog
-
+                  <a class="nav-link" href="./Blog/Blog.html"> Blog
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Service
+                  <a class="nav-link" href="./Service/Service.html">Service
                     <span class="dropdown-toggle__icon d-inline-block">
                       <i data-feather='chevron-down'></i>
                     </span>
@@ -452,8 +451,9 @@ Slemany Medical City
                 >
                   <div class="row flex-lg-row-reverse">
                     <div class="col-xl-7 offset-xl-1 col-lg-6">
+
                       <div
-                        class="features__videos-wrapper features__videos-wrapper--negative-margin"
+                        class="features__videos-wrapper features__videos-wrapper--negative-margin"  id="video_space"
                       >
                         <video
                           src="./assets/videos/Trello-EN.mp4"
@@ -462,7 +462,9 @@ Slemany Medical City
                           autoplay= "true"
                           loop="true"
                           muted="muted"
+
                         >
+
                           <source
                             src="./assets/videos/Trello-EN.mp4"
                             type="video/mp4"
@@ -2138,10 +2140,9 @@ A single healthcare platform to achieve more with less work
                     />
                   </li>
                   <li class="banner__review__list__item nav-item">
-
                   </li>
                 </ul>
-                          </div>
+              </div>
 											<!-- <a href="#!" class="testimonial__card__user-logo d-inline-block">
 												<img src="./assets/images/reviews/stxnext.svg" alt="company logo" class="testimonial__card__user-logo__image w-100">
 											</a> -->
@@ -2157,7 +2158,6 @@ A single healthcare platform to achieve more with less work
 										<div class="testimonial__card__head d-flex align-items-center position-relative">
 											<img src="./assets/images/reviews/testimonial-4.png" alt="testimonial image" class="testimonial__card__head__image img-fluid">
 											<!-- <a href="https://www.youtube.com/watch?v=4HjirZuTD3A" data-autoplay="true" data-vbtype="video" data-gall="testimonialGallery" class="testimonial__card__play-btn venobox rounded-circle position-absolute"> -->
-
 											</a>
 										</div>
 									</div>
@@ -2167,7 +2167,7 @@ A single healthcare platform to achieve more with less work
                          engage with our audience more effectively, and enhance our brand reputation.
                         </p>
 											<h4 class="testimonial__card__user">Slemany Medical City</h4>
-                                         <div class="banner__review-wrapper">
+                                        <div class="banner__review-wrapper">
                 <ul class="banner__review__list nav">
                   <li class="banner__review__list__item nav-item">
                     <img
@@ -2407,16 +2407,14 @@ A single healthcare platform to achieve more with less work
         <button class="price-button" id="button">$1999</button>
       </div>
     </div>
-  </section>   -->
-
-
+  </section> -->
 <section class="FAQ-SEC">
 <div class="container-FAQ">
       <h2>Frequently Asked Questions</h2>
       <div class="accordion">
         <div class="accordion-item">
           <button id="accordion-button-1" aria-expanded="false">
-            <span class="accordion-title">About Tebrae!?</span> <br>
+            <span class="accordion-title"> Tell me about Tebrae</span> <br>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -2427,7 +2425,7 @@ A single healthcare platform to achieve more with less work
         </div>
         <div class="accordion-item">
           <button id="accordion-button-2" aria-expanded="false">
-            <span class="accordion-title">Tebrae’s Services!?</span>
+            <span class="accordion-title"> What services does Tebrae provide?</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -2453,7 +2451,7 @@ A single healthcare platform to achieve more with less work
         </div>
         <div class="accordion-item">
           <button id="accordion-button-4" aria-expanded="false">
-            <span class="accordion-title">How to contact you?</span>
+            <span class="accordion-title">Tebrae's office hours?</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -2466,7 +2464,7 @@ Info@tebrae.krd
         </div>
         <div class="accordion-item">
           <button id="accordion-button-5" aria-expanded="false">
-            <span class="accordion-title">Where do you offer services?</span>
+            <span class="accordion-title">How can I contact Tebrae?</span>
             <span class="icon" aria-hidden="true"></span>
           </button>
           <div class="accordion-content">
@@ -2477,7 +2475,6 @@ Info@tebrae.krd
         </div>
       </div>
     </div>
-
 </section>
 
 
@@ -2506,6 +2503,7 @@ Info@tebrae.krd
                 >
                   Lets Talk!
                 </button> -->
+
               </div>
             </div>
             <div class="row justify-content-center">
